mysql的笔记完成